[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/DroidSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Settings/Settings-Control-Menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Audio" type="VBoxContainer"]
margin_right = 818.0
rect_min_size = Vector2( 818, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 818.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 5.0
margin_right = 818.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Audio"

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 34.0
margin_right = 818.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 16 )
color = Color( 0.0235294, 0.0941176, 0.811765, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 54.0
margin_right = 818.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 4 )

[node name="Master Volume" type="ColorRect" parent="."]
margin_top = 62.0
margin_right = 818.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Master Volume"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Master Volume/HBoxContainer"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Master Volume"

[node name="MarginContainer" type="MarginContainer" parent="Master Volume/HBoxContainer"]
margin_left = 128.0
margin_right = 608.0
margin_bottom = 30.0
rect_min_size = Vector2( 480, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Master Volume/HBoxContainer"]
margin_left = 612.0
margin_right = 814.0
margin_bottom = 30.0

[node name="MasterVolumeLabelContainer" type="MarginContainer" parent="Master Volume/HBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="Master Volume/HBoxContainer/HBoxContainer/MasterVolumeLabelContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Master Volume/HBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0
rect_min_size = Vector2( 4, 0 )

[node name="MasterVolume" type="HSlider" parent="Master Volume/HBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 202.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
scrollable = false

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_top = 96.0
margin_right = 818.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 4 )

[node name="Music Volume" type="ColorRect" parent="."]
margin_top = 104.0
margin_right = 818.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Music Volume"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Music Volume/HBoxContainer"]
margin_top = 5.0
margin_right = 115.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Music Volume"

[node name="MarginContainer" type="MarginContainer" parent="Music Volume/HBoxContainer"]
margin_left = 119.0
margin_right = 608.0
margin_bottom = 30.0
rect_min_size = Vector2( 489, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Music Volume/HBoxContainer"]
margin_left = 612.0
margin_right = 814.0
margin_bottom = 30.0

[node name="MusicVolumeLabelContainer" type="MarginContainer" parent="Music Volume/HBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="Music Volume/HBoxContainer/HBoxContainer/MusicVolumeLabelContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Music Volume/HBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0
rect_min_size = Vector2( 4, 0 )

[node name="MusicVolume" type="HSlider" parent="Music Volume/HBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 202.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
scrollable = false

[node name="MarginContainer4" type="MarginContainer" parent="."]
margin_top = 138.0
margin_right = 818.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 4 )

[node name="Effects Volume" type="ColorRect" parent="."]
margin_top = 146.0
margin_right = 818.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Effects Volume"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Effects Volume/HBoxContainer"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Effects Volume"

[node name="MarginContainer" type="MarginContainer" parent="Effects Volume/HBoxContainer"]
margin_left = 124.0
margin_right = 608.0
margin_bottom = 30.0
rect_min_size = Vector2( 484, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Effects Volume/HBoxContainer"]
margin_left = 612.0
margin_right = 814.0
margin_bottom = 30.0

[node name="EffectsVolumeLabelContainer" type="MarginContainer" parent="Effects Volume/HBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsVolumeLabel" type="Label" parent="Effects Volume/HBoxContainer/HBoxContainer/EffectsVolumeLabelContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Effects Volume/HBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0
rect_min_size = Vector2( 4, 0 )

[node name="EffectsVolume" type="HSlider" parent="Effects Volume/HBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 202.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
scrollable = false

[node name="MarginContainer5" type="MarginContainer" parent="."]
margin_top = 180.0
margin_right = 818.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 4 )

[node name="Minimized Volume" type="ColorRect" parent="."]
margin_top = 188.0
margin_right = 818.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer" type="HBoxContainer" parent="Minimized Volume"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Minimized Volume/HBoxContainer"]
margin_top = 5.0
margin_right = 192.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Volume While Minimized"

[node name="MarginContainer" type="MarginContainer" parent="Minimized Volume/HBoxContainer"]
margin_left = 196.0
margin_right = 608.0
margin_bottom = 30.0
rect_min_size = Vector2( 412, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Minimized Volume/HBoxContainer"]
margin_left = 612.0
margin_right = 814.0
margin_bottom = 30.0

[node name="MinimizedVolumeLabelContainer" type="MarginContainer" parent="Minimized Volume/HBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizedVolumeLabel" type="Label" parent="Minimized Volume/HBoxContainer/HBoxContainer/MinimizedVolumeLabelContainer"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Minimized Volume/HBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 38.0
margin_bottom = 30.0
rect_min_size = Vector2( 4, 0 )

[node name="VolumeWhileMinimized" type="HSlider" parent="Minimized Volume/HBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 202.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 30 )
scrollable = false
[connection signal="value_changed" from="Master Volume/HBoxContainer/HBoxContainer/MasterVolume" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="Music Volume/HBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="Effects Volume/HBoxContainer/HBoxContainer/EffectsVolume" to="." method="_on_EffectsVolumeSlider_value_changed"]
[connection signal="value_changed" from="Minimized Volume/HBoxContainer/HBoxContainer/VolumeWhileMinimized" to="." method="_on_MinimizedVolumeSlider_value_changed"]
